src/routes/footer.styles.scss
@import "../globals/_theme.scss";
$buttonTransitionTime: 0.06s;

.footer {
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  height: 11vh;
  max-height: 150px;
  width: 78%;
  display: flex;
  margin: 3vh 0 3vh 0;
  transition: background-color $theme-transition, box-shadow $theme-transition;

  @media screen and (max-width: 972px) {
    width: 95%;
  }
  @media screen and (max-width: 500px) {
    margin: 5px 0 5px 0;
  }
  @media screen and (min-height: 670px) {
    margin: 15px 0 15px 0;
  }

  .switchContainer {
    flex: 1;
    font-family: $theme-font;

    .toggle {
      font-family: $theme-font;
    }
  }

  .extlinks-container {
    flex: 1;
    height: 100%;
    display: flex;
    align-items: center;
    right: 1px;
    bottom: 2px;
    justify-content: flex-end;
  }

  .toTopContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;

    .toTopButton {
      display: inline-block;
      padding: 5px;
      transform: translate(-5%, -5%);
      font-family: $theme-font;
      text-decoration: none;
      font-size: 1rem;
      border-width: 0px;
      cursor: pointer;
      transition: all $buttonTransitionTime;
      @include themed() {
        background-color: t($primary);
        color: t($text-color);
      }

      &::before {
        //bottom side
        @extend %block;
        bottom: -9px;
        height: 9px;
        width: 100%;
        left: 5px;
        transform: skewX(45deg);
        transition: all $buttonTransitionTime;
        @include themed() {
          background-color: darken(t($primary), 14%);
        }
      }

      &::after {
        // right side
        @extend %block;
        right: -10px;
        height: 98%;
        width: 10px;
        bottom: -5px;
        transform: skewY(45deg);
        transition: all $buttonTransitionTime;
        @include themed() {
          background-color: darken(t($primary), 30%);
        }
      }

      &:active {
        transform: translate(-7%, -3%);
        margin-left: 10px;
        margin-top: 10px;

        &::before {
          bottom: -5px;
          height: 6px;
          left: 3px;
        }

        &::after {
          right: -6px;
          width: 6px;
          bottom: -3px;
        }
      }

      &:hover {
        @include themed() {
          background-color: darken(t($primary), 5%);
        }
      }
    }
  }
}

